sass/components/_modal.scss
/* ... */
.more-modal__button {
    .btn {
        font-size: .9em;
        font-weight: 600;
        height: 39px;
        width: 100%;
    }
}

.more-modal__dropdown {
    padding: 0 16px;
    font-weight: 600;
    display: inline-flex;

    span {
        font-size: .9em;
        color: var(--center-channel-color);
    }

    a:hover {
        color: var(--center-channel-color);
        text-decoration: none;
    }
}

.more-modal__icon-container {
    margin-right: 6px;
}

.more-modal__list {
    display: flex;
    flex-direction: column;

    .browser--ie & {
        flex: 20;
    }

    >div {
        min-height: 100%;
        overflow: auto;
    }

    .popover & {
        font-size: .95em;

        .more-modal__row {
            padding: 5px 10px;
        }
    }

    .more-modal__image {
        @include border-radius(60px);
        flex-grow: 0;
        flex-shrink: 0;
        margin-top: 2px;
        max-width: none;
    }

    .more-modal__details {
        align-self: center;
        flex-grow: 1;
        flex-shrink: 1;
        font-size: .9em;
        overflow: hidden;
        padding-left: 10px;
        text-overflow: ellipsis;

        .more-modal__name {
            margin: 5px 0;
            display: flex;
            min-width: 0;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;

            .more-modal__name_sub {
                opacity: 0.5;
                font-weight: 500;
            }

            .more-modal__name_count {
                opacity: 0.6;
                font-weight: 400;
            }
        }
    }

    .more-modal__actions {
        flex-grow: 0;
        flex-shrink: 0;
        margin: 5px 0;
        padding-left: 8px;
    }

    .more-modal__name {
        display: flex;
        font-weight: 600;
        white-space: nowrap;

        span {
            overflow: hidden;
            max-width: 90%;
            text-overflow: ellipsis;
        }
    }

    .more-modal__row--link {
        color: inherit;
        text-decoration: none;

        &:hover,
        &:focus {
            color: inherit;
        }
    }

    .more-modal__description {
        @include opacity(.6);
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:empty {
            display: none;
        }
    }

    .more-modal__row {
        border-bottom: 1px solid $light-gray;
        display: flex;
        padding: 10px 15px;
        align-items: center;

        &.clickable {
            cursor: pointer;
        }

        &.more-modal__row--selected {
            background: rgba(var(--center-channel-color-rgb), 0.08);

            .more-modal__actions--round {
                opacity: .5;
            }
        }
    }

    .more-modal__placeholder-row {
        padding: 10px 15px;
    }

    .more-modal__actions--round {
        height: 32px;
        line-height: 32px;
        opacity: 0;
        text-align: center;
        width: 32px;
    }

    .more-modal__right {
        display: flex;
        flex-direction: column;
        width: 100%;

        .control-label {
            font-weight: normal;
            padding: 5px 0 0 5px;
        }
    }

    .more-modal__top {
        display: flex;
    }

    .more-modal__bottom>.has-error {
        padding-left: 5px;
    }

    p {
        margin: 5px 0;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.member-select__container {
    position: absolute;
    right: 15px;
    top: 15px;
}

.filtered-user-list {
    display: flex;
    flex-direction: column;
    height: calc(90vh - 120px);
    width: 100%;

    >div {
        flex: 1 1 auto;
    }

    .multi-select__wrapper {
        display: flex;
        flex-direction: column;
        flex-grow: 500;
        height: 1px;
    }

    .more-modal__list {
        flex-grow: 500;
        height: 1px;
    }

    .filter-button {
        .btn {
            height: 34px;
        }
    }

    .filter-controls {
        padding: 1em 1.5em 0;

        .filter-control__next {
            float: right;
        }
    }

    .filter-button {
        margin-left: 0;
        padding-left: 0;
    }
}

.team-selector-modal,
.channel-selector-modal {
    .more-modal__row {
        border: 0px;

        &:nth-child(odd) {
            background: rgba(0, 0, 0, .03);
        }

        .team-name {
            padding-left: 5px;
            color: $gray;
        }

        .icon__lock,
        .icon__globe {
            margin-right: 5px;
        }
    }
}

.modal-invite-member {
    .btn:hover {
        text-decoration: underline;
    }
}

.team-selector-modal,
.channel-selector-modal {
    .modal-header {
        background: $black;
        color: $white;

        .close {
            color: $white;
            opacity: 1;

            &:hover {
                opacity: 1;
            }
        }
    }

    .modal-body {
        padding: 15px 0;

        .filter-row {
            padding: 0 15px;
        }

        .more-modal__row--selected {
            background-color: lighten($primary-color, 40%);

            .more-modal__actions--round {
                opacity: .5;
            }
        }

        .no-channel-message {
            width: 100%;
            text-align: center;
            font-size: 1.25em;
            color: $gray;
            margin-top: 40px;
        }

        .filter-row--full {
            flex-grow: 0;
        }
    }

    .filter-control {
        color: $primary-color;
        background: none;
        border: none;

        &:hover,
        &:focus,
        &:active {
            color: $primary-color;
            background: none;
            border: none;
            box-shadow: none;
        }
    }
}

.more-public-direct-channels {
    .filtered-user-list {
        height: calc(90vh - 180px);
    }
}
/* ... */

